# api-diet-optimizer

./: .gitignore  Dockerfile  ENHANCEMENT_SUMMARY.md  FIBER_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  NUTRIENT_UNITS_FIXES_SUMMARY.md  NUTRIENT_UNITS_REFERENCE.md  NUTRIENT_UPDATE_SUMMARY.md  PROMPT.md  README.md  docker-compose.yml  example_usage.py  openapi.json  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py  exceptions.py
app/models/: request.py  response.py
app/routers/: optimization.py
app/services/: optimizer.py
argocd/: application.yaml
crossplane/: artifact-registry.yaml  provider-config.yaml  provider-gcp.yaml  static-ip.yaml
docs/: DEPLOYMENT.md
helm/diet-optimizer/: Chart.yaml  values-prod.yaml  values.yaml
helm/diet-optimizer/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  httpscaledobject.yaml  service.yaml
terraform/: backend.tf  helm-releases.tf  iam.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
tests/: test_enhanced_nutrition.py  test_optimization.py  test_optimizer_service.py  test_vitamin_d.py
